# cmf-docker-metrics

./: .gitignore  Dockerfile  README.md  build.sh  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
cmf_docker_metrics/: main.py
